--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -412,7 +412,7 @@
                         <TextView
                             android:id="@+id/textViewShowDistance"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_height="19dp"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="100px"
                             android:layout_marginRight="25px"
@@ -420,8 +420,7 @@
                             android:text="@string/NA"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_28"
-                            android:visibility="visible"
-                        />
+                            android:visibility="visible" />
 
                     </LinearLayout>
 
