--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_login.xml
@@ -13,7 +13,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="30px"
         android:layout_marginRight="30px"
-        android:layout_marginTop="50px"
+        android:layout_marginTop="20px"
         android:orientation="vertical"
         android:visibility="visible">
 
@@ -25,12 +25,12 @@
             android:orientation="horizontal"
             android:padding="2px">
 
-            <ImageView
-                android:layout_width="27px"
-                android:layout_height="45px"
-                android:layout_gravity="center"
-                android:layout_marginLeft="32px"
-                android:background="@drawable/new_mobile_icon"/>
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="wrap_content"
+                android:layout_height="88px"
+                android:background="@null" />
+
 
 
             <AutoCompleteTextView
@@ -59,7 +59,7 @@
             android:layout_marginTop="32px"
             android:text="@string/GENERATE_OTP"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/button_theme_alpha_white_stroke_selector"
+            android:background="@drawable/button_bg_gradient"
             android:textColor="@color/white"
             android:textSize="@dimen/button_text_size"/>
 
