--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -173,6 +173,7 @@
     <color name="stroke_color_light">#CDCDCD</color>
 
     <color name="text_color">#2F221B</color>
+    <color name="text_color_opaque">#402F221B</color>
     <color name="text_color_light">#992F221B</color>
 
     <color name="theme_color_start">#FC644F</color>
