jingos_driver_fork: white label code more generic & WL Taxi icons added as base

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -154,7 +154,7 @@
                     android:layout_height="35px"
                     android:layout_marginLeft="20px"
                     android:layout_centerVertical="true"
-                    android:src="@drawable/jugnoo_on_icon"
+                    android:src="@drawable/jugnoo_side_menu_icon_drawable"
                     android:tag="mwar"/>
 
                 <TextView
