--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -5,7 +5,7 @@
     android:layout_width="720px"
     android:layout_height="1134px"
     android:animateLayoutChanges="true"
-    android:background="@color/bg_on_boarding"
+    android:background="@drawable/bg_on_boarding_drawable"
     android:baselineAligned="false"
     android:orientation="vertical"
     android:splitMotionEvents="false">
@@ -100,18 +100,39 @@
         android:id="@+id/relativeLayoutJugnooLogo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="130px"
+        android:layout_marginTop="50px"
         android:animateLayoutChanges="true"
         android:splitMotionEvents="false">
 
-        <ImageView
-            android:id="@+id/imageViewJugnooLogo"
-            android:layout_width="400px"
-            android:layout_height="400px"
+
+        <RelativeLayout
             android:layout_centerHorizontal="true"
-            android:background="@drawable/splash_logo"
-            android:tag="mwar"
-            android:visibility="visible" />
+            android:layout_width="420px"
+            android:layout_height="420px">
+
+            <ImageView
+                android:id="@+id/imageViewJugnooLogo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_above="@+id/textViewDriver"
+                android:background="@drawable/ic_splash_logo_drawable"
+                android:tag="mwar"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/textViewDriver"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="20px"
+                android:text="@string/driver_app"
+                android:textColor="@color/white"
+                android:textSize="32px"/>
+        </RelativeLayout>
+
 
         <RelativeLayout
             android:id="@+id/jugnooTextImgRl"
@@ -136,17 +157,7 @@
 
         </RelativeLayout>
 
-        <TextView
-            android:id="@+id/textViewDriver"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:layout_below="@+id/imageViewJugnooLogo"
-            android:layout_marginTop="18px"
-            android:text="@string/driver_app"
-            android:textColor="@color/white"
-            android:textSize="32px"/>
+
 
 
         <ProgressBar
@@ -199,7 +210,7 @@
                     android:layout_width="273px"
                     android:layout_height="100px"
                     android:layout_marginTop="32px"
-                    android:background="@drawable/buttons_on_boarding"
+                    android:background="@drawable/buttons_on_boarding_drawable"
                     android:text="@string/login"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
@@ -211,7 +222,7 @@
                     android:layout_height="100px"
                     android:layout_marginLeft="32px"
                     android:layout_marginTop="32px"
-                    android:background="@drawable/buttons_on_boarding"
+                    android:background="@drawable/buttons_on_boarding_drawable"
                     android:text="@string/register"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
