--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chathead.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/chathead.xml
@@ -9,7 +9,7 @@
         android:id="@+id/chathead_img"
         android:layout_width="116px"
         android:layout_height="116px"
-        android:src="@drawable/floating_icon"
+        android:src="@drawable/floating_icon_drawable"
         android:tag="mwar"/>
 
 
