--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/dialog_upload_document.xml
@@ -79,7 +79,7 @@
                         android:layout_marginBottom="20px"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginTop="10px"
-                        android:text="Gallery"
+                        android:text="@string/gallery"
                         android:textColor="@color/grey_dark_more"
                         android:textSize="20px"
                         android:visibility="visible"/>
@@ -110,7 +110,7 @@
                         android:layout_marginBottom="20px"
                         android:layout_marginTop="10px"
                         android:layout_toRightOf="@+id/image_gallery"
-                        android:text="Camera"
+                        android:text="@string/camera"
                         android:textColor="@color/grey_dark_more"
                         android:textSize="20px"
                         android:visibility="visible"/>
