--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_delivery_tab.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_delivery_tab.xml
@@ -28,7 +28,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Please wait..."
+            android:text="@string/please_wait"
             android:textSize="20px"/>
 
     </android.support.v7.widget.CardView>
