--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_cancel_option.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_cancel_option.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:padding="40px"
-        android:text="Driver is late"
+        android:text="@string/driver_is_late"
         android:textColor="@color/grey_dark"
         android:textSize="30px"/>
 
