--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_language.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_language.xml
@@ -19,7 +19,7 @@
             android:id="@+id/languageName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="English"
+            android:text="@string/english"
             android:textColor="@color/grey_dark"
             android:textSize="42px"
             android:layout_centerHorizontal="true"
