--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_return_reasons.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/list_item_return_reasons.xml
@@ -13,7 +13,7 @@
         android:gravity="center_vertical"
         android:padding="15px"
         android:layout_marginLeft="20px"
-        android:text="Driver is late"
+        android:text="@string/driver_is_late"
         android:textColor="@color/text_color"
         android:layout_toRightOf="@+id/imageViewReturnOptionCheck"
         android:textSize="28px"/>
