--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_engaged.xml
@@ -420,7 +420,8 @@
                             android:text="@string/NA"
                             android:textColor="@color/black"
                             android:textSize="@dimen/text_size_28"
-                            android:visibility="visible" />
+                            android:visibility="visible"
+                        />
 
                     </LinearLayout>
 
