--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -42,6 +42,7 @@
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:text="@string/terms"
+            android:visibility="@integer/show_t_and_c_profile"
             android:layout_marginRight="10px"
             android:textColor="@color/white"
             android:textSize="24px" />
