--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_splash_new.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
     android:id="@+id/relative"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="720px"
     android:layout_height="1134px"
     android:animateLayoutChanges="true"
-    android:background="@color/white"
+    android:background="@color/bg_on_boarding"
     android:baselineAligned="false"
     android:orientation="vertical"
     android:splitMotionEvents="false">
@@ -20,19 +21,19 @@
             android:layout_centerVertical="true"
             android:background="@drawable/back_btn_selector"
             android:textColor="@drawable/blue_alpha_color_selector"
-            android:textSize="@dimen/button_text_size" />
+            android:textSize="@dimen/button_text_size"/>
 
 
         <TextView
             android:id="@+id/textViewRegDriver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="162px"
-            android:text="@string/register_as_driver"
             android:textColor="@color/white"
+            android:layout_marginLeft="162px"
+            android:layout_centerVertical="true"
             android:textSize="46px"
-            android:visibility="gone" />
+            android:visibility="gone"
+            android:text="@string/register_as_driver"/>
 
         <RelativeLayout
             android:id="@+id/selectLanguageLl"
@@ -43,7 +44,7 @@
             android:layout_marginRight="5px"
             android:layout_marginTop="25px"
             android:background="@drawable/background_translucent_white_rounded_orange_bordered"
-            android:visibility="gone">
+            android:visibility="@integer/show_language_control">
 
             <ImageView
                 android:layout_width="wrap_content"
@@ -51,14 +52,14 @@
                 android:layout_gravity="center"
                 android:layout_marginLeft="6px"
                 android:background="@drawable/language_icon"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <ImageView
                 android:layout_width="2px"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="6px"
                 android:background="@color/new_orange"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
             <Spinner
                 android:id="@+id/language_spinner"
@@ -76,7 +77,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="15px"
-                android:background="@drawable/white_arrow_down" />
+                android:background="@drawable/white_arrow_down"/>
 
         </RelativeLayout>
 
@@ -86,13 +87,13 @@
         android:id="@+id/viewInitJugnoo"
         android:layout_width="match_parent"
         android:layout_height="40px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
     <ImageView
         android:id="@+id/viewInitSplashJugnoo"
         android:layout_width="match_parent"
         android:layout_height="200px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 
     <RelativeLayout
@@ -124,13 +125,14 @@
                 android:id="@+id/jugnooTextImg"
                 android:layout_width="279px"
                 android:layout_height="86px"
-                android:tag="mwar" />
+                android:tag="mwar"/>
 
             <ImageView
                 android:id="@+id/jugnooTextImg2"
                 android:layout_width="70px"
                 android:layout_height="90px"
-                android:src="@drawable/transparent" />
+                android:src="@drawable/transparent"
+                />
 
         </RelativeLayout>
 
@@ -138,23 +140,24 @@
             android:id="@+id/textViewDriver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/imageViewJugnooLogo"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
+            android:layout_below="@+id/imageViewJugnooLogo"
             android:layout_marginTop="18px"
             android:text="@string/driver_app"
             android:textColor="@color/white"
-            android:textSize="32px" />
+            android:textSize="32px"/>
 
 
         <ProgressBar
-            android:id="@+id/progressBar1"
-            android:layout_width="100px"
-            android:layout_height="100px"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="24px"
-            android:layout_marginTop="760px"
-            android:visibility="gone" />
+        android:id="@+id/progressBar1"
+        android:layout_width="100px"
+        android:layout_height="100px"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="760px"
+        android:layout_marginBottom="24px"
+        android:visibility="gone"
+        />
 
     </RelativeLayout>
 
@@ -163,7 +166,7 @@
         android:id="@+id/viewInitLS"
         android:layout_width="match_parent"
         android:layout_height="300px"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
 
     <RelativeLayout
@@ -185,6 +188,7 @@
             android:visibility="visible">
 
 
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -195,11 +199,11 @@
                     android:layout_width="273px"
                     android:layout_height="100px"
                     android:layout_marginTop="32px"
-                    android:background="@drawable/button_bg_gradient"
+                    android:background="@drawable/buttons_on_boarding"
                     android:text="@string/login"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/text_size_34" />
+                    android:textSize="@dimen/text_size_34"/>
 
                 <Button
                     android:id="@+id/buttonRegister"
@@ -207,11 +211,12 @@
                     android:layout_height="100px"
                     android:layout_marginLeft="32px"
                     android:layout_marginTop="32px"
-                    android:background="@drawable/button_bg_gradient"
+                    android:background="@drawable/buttons_on_boarding"
                     android:text="@string/register"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
                     android:textSize="@dimen/text_size_34" />
+
 
 
             </LinearLayout>
@@ -221,15 +226,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="54px"
                 android:layout_marginTop="32px"
-                android:gravity="center"
-                android:visibility="visible">
+                android:visibility="visible"
+                android:gravity="center">
 
                 <ImageView
                     android:id="@+id/imageViewHorizontal3"
                     android:layout_width="330px"
                     android:layout_height="3px"
                     android:layout_centerVertical="true"
-                    android:background="@color/white" />
+                    android:background="@color/white"/>
 
                 <TextView
                     android:id="@+id/textViewName"
@@ -242,8 +247,8 @@
                     android:paddingRight="10px"
                     android:text="@string/or"
                     android:textColor="@color/white"
-                    android:textSize="30px"
-                    android:visibility="gone" />
+                    android:visibility="gone"
+                    android:textSize="30px"/>
 
                 <ImageView
                     android:id="@+id/imageViewHorizontal4"
@@ -251,7 +256,7 @@
                     android:layout_height="3px"
                     android:layout_centerVertical="true"
                     android:layout_toRightOf="@+id/textViewName"
-                    android:background="@color/white" />
+                    android:background="@color/white"/>
 
             </RelativeLayout>
 
@@ -260,10 +265,10 @@
                 android:id="@+id/textViewCustomerApp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="32px"
                 android:text="@string/looking_for_customer_app"
                 android:textColor="@color/white"
-                android:textSize="36px" />
+                android:layout_marginTop="32px"
+                android:textSize="36px"/>
 
             <Button
                 android:id="@+id/buttonRegisterTookan"
@@ -274,7 +279,8 @@
                 android:text="@string/register_via_agent"
                 android:textColor="@color/white"
                 android:textSize="@dimen/text_size_34"
-                android:visibility="gone" />
+                android:visibility="gone"
+                />
 
             <TextView
                 android:id="@+id/textViewTerms"
@@ -282,9 +288,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="60px"
                 android:text=""
+                android:visibility="gone"
                 android:textColor="@color/white"
-                android:textSize="@dimen/text_size_26"
-                android:visibility="gone" />
+                android:textSize="@dimen/text_size_26"/>
 
         </LinearLayout>
 
@@ -293,9 +299,9 @@
 
 
     <!-- login buttons -->
-    <include layout="@layout/layout_login" />
+    <include layout="@layout/layout_login"/>
 
 
-    <include layout="@layout/layout_splash_signup" />
+    <include layout="@layout/layout_splash_signup"/>
 
 </LinearLayout>
